TRegex: backport fixup: JDK-17 compatibility